--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-toastify": "^8.1.0",
     "react-use-cart": "^1.13.0",
     "swiper": "^6.8.4",
