--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
+    "@progress/kendo-drawing": "^1.16.1",
+    "@progress/kendo-licensing": "^1.2.1",
+    "@progress/kendo-react-pdf": "^4.13.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -24,6 +27,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-to-print": "^2.14.3",
     "react-toastify": "^8.1.0",
     "react-use-cart": "^1.13.0",
     "swiper": "^6.8.4",
